# quagga_evolvabilty

./: .gitignore  README  README_MININEXT
config/samples/: daemons  debian.conf  quagga  zebra.conf
lookupService/: lookUpService.c  lookUpService.h
quagga-0.99.24.1/: .ycm_extra_conf.py  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  cscope.files  quagga
quagga-0.99.24.1/babeld/: Makefile.in
quagga-0.99.24.1/bgpd/: Makefile.am  Makefile.in  benchmark.c  benchmark.h  bgp_advertise.c  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_benchmark_structs.h  bgp_common.c  bgp_common.h  bgp_damp.c  bgp_main.c  bgp_nexthop.c  bgp_packet.c  bgp_route.c  bgp_route.h  bgpd.c  bgpd.h  dbgp.c  dbgp.h  dbgp_lookup.c  dbgp_lookup.h  general_configuration.cpp  general_configuration.h  integrated_advertisement.pb.cc  integrated_advertisement.pb.h  integrated_advertisement.proto  integrated_advertisement_functions.cpp  integrated_advertisement_functions.h  pathlet_config.h  pathlet_internal_state.cpp  pathlet_internal_state.h  pathlets.c  pathlets.cpp  pathlets.h  quagga_config.pb.cc  quagga_config.pb.h  quagga_config.proto  (+8 more)
quagga-0.99.24.1/doc/: Makefile.in  quagga.info  quagga.info-1  quagga.info-2  stamp-vti  version.texi
quagga-0.99.24.1/isisd/: Makefile.in
quagga-0.99.24.1/isisd/topology/: Makefile.in
quagga-0.99.24.1/lib/: Makefile.in  version.h  workqueue.c
quagga-0.99.24.1/lookupService/: lookUpService.c  lookUpService.h
quagga-0.99.24.1/m4/: Makefile.in
quagga-0.99.24.1/ospf6d/: Makefile.in
quagga-0.99.24.1/ospfclient/: Makefile.in
quagga-0.99.24.1/ospfd/: Makefile.in
quagga-0.99.24.1/pimd/: Makefile.in
quagga-0.99.24.1/pkgsrc/: Makefile.in
quagga-0.99.24.1/redhat/: Makefile.in  quagga.spec
quagga-0.99.24.1/ripd/: Makefile.in
quagga-0.99.24.1/ripngd/: Makefile.in
quagga-0.99.24.1/solaris/: Makefile.in
quagga-0.99.24.1/tests/: Makefile.in  test-commands-defun.c
quagga-0.99.24.1/tests/bgpd.tests/: Makefile.in
quagga-0.99.24.1/tests/libzebra.tests/: Makefile.in
quagga-0.99.24.1/vtysh/: Makefile.in
quagga-0.99.24.1/watchquagga/: Makefile.in
quagga-0.99.24.1/zebra/: Makefile.in
